[project]
name = "yatvr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "simple-term-menu>=1.6.6",
    "tmdbsimple>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
